# TalkSmartAI

./: .env.example  .gitignore  config.rar  database.db  enums.py  hooks.py  logging_engine.py  main.py  pyproject.toml  requirements.txt  start_payment.py  temp.py  tortoise_config.json
API/: gpt.py  sst.py  stt.py  tts.py
config/: api.yml  courses.yml  global.yml  logical.yml  messages.yml  telegram.yml
config/courses/: 1.yml
database/: conversations.py  invoices.py  promises.py  serializer.py  user_courses.py  users.py
engine/: callback.py  course.py  dialogue.py  dump.py  start.py  video.py  voice.py
engine/payment/: draft.py  endpoints.py  main.py  start_rest.py
models/: conversations.py  invoices.py  promises.py  user_courses.py  users.py
pydantic_models/: config.py  conversations.py  invoices.py  promises.py  user_courses.py  users.py
pydantic_models/system/: payment.py
tools/: misc.py  yaml_parser.py
